音が出ない問題はenchant.jsのバージョンUPで解決、重ね合わせの問題も直った：ゲーム中のフラグ管理が狂っているのはなぜ？

--- a/select.html
+++ b/select.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="promote/iconimage_moriy_512x512.png"></link>
 
     <!-- PWA -->
-    <link rel="manifest" href="manifest.webmanifest"></link>
-    <script type="text/javascript" src="./registpwa.js"></script>
+    <!-- <link rel="manifest" href="manifest.webmanifest"></link>
+    <script type="text/javascript" src="./registpwa.js"></script> -->
 
     <script type="text/javascript">
 
@@ -204,12 +204,12 @@
             <dl class="episodes">
               <!-- prolog -->
               <dt>
-                <a href="#" onclick="gotoEpisode(0);"><img src="./siteimg/epimg_prolog.png" class="epimg" /></a>
+                <a onclick="gotoEpisode(0);"><img src="./siteimg/epimg_prolog.png" class="epimg" /></a>
                 <p class="epno">episode:00</p>
               </dt>
               <dd>
                 <h3 class="epnm">
-                  <a href="#" onclick="gotoEpisode(0);">prolog</a>
+                  <a onclick="gotoEpisode(0);">prolog</a>
                 </h3>
                 <img src="./siteimg/lamp_off.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" />
               </dd>
