--- a/stage09.html
+++ b/stage09.html
@@ -2,17 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, user-scalable=no"> 
-        <meta name="apple-mobile-web-app-capable" content="yes"> 
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <title>Moriy - the deep fact</title>
         <link rel="shortcut icon" href="promote/iconimage_moriy_512x512.png"></link>
 
         <!-- PWA -->
-        <link rel="manifest" href="manifest.webmanifest"></link>
-        <script type="text/javascript" src="./registpwa.js"></script>
+        <!-- <link rel="manifest" href="manifest.webmanifest"></link>
+        <script type="text/javascript" src="./registpwa.js"></script> -->
 
-        <script type="text/javascript" src="./enchant.js"></script>
+        <!-- <script type="text/javascript" src="./enchant.js"></script> its a buggy?-->
+        <script type="text/javascript" src="./enchant.min.js"></script>
         <script type="text/javascript" src="./enchant.plugins/nineleap.enchant.js"></script>
         <script type="text/javascript" src="./enchant.plugins/ui.enchant.js"></script>
         <script type="text/javascript" src="./enchant.plugins/util.enchant.js"></script>
