イベントがおかしいんじゃなかった。最初からあるバグ（ジャンプの高さの見積もりが甘い

--- a/select.html
+++ b/select.html
@@ -220,12 +220,12 @@
             <dl class="episodes">
               <!-- forecourt -->
               <dt>
-                <a href="#" onclick="gotoEpisode(7);"><img src="./siteimg/epimg_forecourt.png" class="epimg" /></a>
+                <a onclick="gotoEpisode(7);"><img src="./siteimg/epimg_forecourt.png" class="epimg" /></a>
                 <p class="epno">episode:01</p>
               </dt>
               <dd>
                 <h3 class="epnm">
-                  <a href="#" onclick="gotoEpisode(7);">forecourt</a>
+                  <a onclick="gotoEpisode(7);">forecourt</a>
                 </h3>
                 <img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" />
               </dd>
@@ -236,12 +236,12 @@
             <dl class="episodes">
               <!-- ribbons -->
               <dt>
-                <a href="#" onclick="gotoEpisode(2);"><img src="./siteimg/epimg_ribbons.png" class="epimg" /></a>
+                <a onclick="gotoEpisode(2);"><img src="./siteimg/epimg_ribbons.png" class="epimg" /></a>
                 <p class="epno">episode:02</p>
               </dt>
               <dd>
                 <h3 class="epnm">
-                  <a href="#" onclick="gotoEpisode(2);">banners</a>
+                  <a onclick="gotoEpisode(2);">banners</a>
                 </h3>
                 <img src="./siteimg/lamp_off.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" />
               </dd>
@@ -252,12 +252,12 @@
             <dl class="episodes">
               <!-- brightness -->
               <dt>
-                <a href="#" onclick="gotoEpisode(1);"><img src="./siteimg/epimg_brightness.png" class="epimg" /></a>
+                <a onclick="gotoEpisode(1);"><img src="./siteimg/epimg_brightness.png" class="epimg" /></a>
                 <p class="epno">episode:03</p>
               </dt>
               <dd>
                 <h3 class="epnm">
-                  <a href="#" onclick="gotoEpisode(1);">brightness</a>
+                  <a onclick="gotoEpisode(1);">brightness</a>
                 </h3>
                 <img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" />
               </dd>
@@ -268,12 +268,12 @@
             <dl class="episodes">
               <!-- mausoleum -->
               <dt>
-                <a href="#" onclick="gotoEpisode(8);"><img src="./siteimg/epimg_mausoleum.png" class="epimg" /></a>
+                <a onclick="gotoEpisode(8);"><img src="./siteimg/epimg_mausoleum.png" class="epimg" /></a>
                 <p class="epno">episode:04</p>
               </dt>
               <dd>
                 <h3 class="epnm">
-                  <a href="#" onclick="gotoEpisode(8);">mausoleum</a>
+                  <a onclick="gotoEpisode(8);">mausoleum</a>
                 </h3>
                 <img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" />
               </dd>
@@ -284,12 +284,12 @@
             <dl class="episodes">
               <!-- loophole -->
               <dt>
-                <a href="#" onclick="gotoEpisode(6);"><img src="./siteimg/epimg_loophole.png" class="epimg" /></a>
+                <a onclick="gotoEpisode(6);"><img src="./siteimg/epimg_loophole.png" class="epimg" /></a>
                 <p class="epno">episode:05</p>
               </dt>
               <dd>
                 <h3 class="epnm">
-                  <a href="#" onclick="gotoEpisode(6);">loophole</a>
+                  <a onclick="gotoEpisode(6);">loophole</a>
                 </h3>
                 <img src="./siteimg/lamp_off.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" />
               </dd>
@@ -300,12 +300,12 @@
             <dl class="episodes">
               <!-- dungeon -->
               <dt>
-                <a href="#" onclick="gotoEpisode(5);"><img src="./siteimg/epimg_dungeon.png" class="epimg" /></a>
+                <a onclick="gotoEpisode(5);"><img src="./siteimg/epimg_dungeon.png" class="epimg" /></a>
                 <p class="epno">episode:06</p>
               </dt>
               <dd>
                 <h3 class="epnm">
-                  <a href="#" onclick="gotoEpisode(5);">dungeon</a>
+                  <a onclick="gotoEpisode(5);">dungeon</a>
                 </h3>
                 <img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" />
               </dd>
@@ -316,12 +316,12 @@
             <dl class="episodes">
               <!-- maze -->
               <dt>
-                <a href="#" onclick="gotoEpisode(3);"><img src="./siteimg/epimg_maze.png" class="epimg" /></a>
+                <a onclick="gotoEpisode(3);"><img src="./siteimg/epimg_maze.png" class="epimg" /></a>
                 <p class="epno">episode:07</p>
               </dt>
               <dd>
                 <h3 class="epnm">
-                  <a href="#" onclick="gotoEpisode(3);">maze</a>
+                  <a onclick="gotoEpisode(3);">maze</a>
                 </h3>
                 <img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_on.png" class="epdif" />
               </dd>
@@ -332,12 +332,12 @@
             <dl class="episodes">
               <!-- passkey -->
               <dt>
-                <a href="#" onclick="gotoEpisode(4);"><img src="./siteimg/epimg_passkey.png" class="epimg" /></a>
+                <a onclick="gotoEpisode(4);"><img src="./siteimg/epimg_passkey.png" class="epimg" /></a>
                 <p class="epno">episode:08</p>
               </dt>
               <dd>
                 <h3 class="epnm">
-                  <a href="#" onclick="gotoEpisode(4);">passkey</a>
+                  <a onclick="gotoEpisode(4);">passkey</a>
                 </h3>
                 <img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" />
               </dd>
@@ -348,12 +348,12 @@
             <dl class="episodes">
               <!-- core -->
               <dt>
-                <a href="#" onclick="gotoEpisode(9);"><img src="./siteimg/epimg_core.png" class="epimg" /></a>
+                <a onclick="gotoEpisode(9);"><img src="./siteimg/epimg_core.png" class="epimg" /></a>
                 <p class="epno">episode:09</p>
               </dt>
               <dd>
                 <h3 class="epnm">
-                  <a href="#" onclick="gotoEpisode(9);">core</a>
+                  <a onclick="gotoEpisode(9);">core</a>
                 </h3>
                 <img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_on.png" class="epdif" />
               </dd>
@@ -364,12 +364,12 @@
             <dl class="episodes">
               <!-- lyra -->
               <dt>
-                <a href="#" onclick="gotoEpisode(10);"><img src="./siteimg/epimg_lyra.png" class="epimg" /></a>
+                <a onclick="gotoEpisode(10);"><img src="./siteimg/epimg_lyra.png" class="epimg" /></a>
                 <p class="epno">episode:10</p>
               </dt>
               <dd>
                 <h3 class="epnm">
-                  <a href="#" onclick="gotoEpisode(10);">lyra</a>
+                  <a onclick="gotoEpisode(10);">lyra</a>
                 </h3>
                 <img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" />
               </dd>
@@ -380,12 +380,12 @@
             <dl class="episodes">
               <!-- epilogue -->
               <dt>
-                <a href="#" onclick="gotoEpisode(11);"><img src="./siteimg/epimg_epilogue.png" class="epimg" /></a>
+                <a onclick="gotoEpisode(11);"><img src="./siteimg/epimg_epilogue.png" class="epimg" /></a>
                 <p class="epno">episode:11</p>
               </dt>
               <dd>
                 <h3 class="epnm">
-                  <a href="#" onclick="gotoEpisode(11);">epilogue</a>
+                  <a onclick="gotoEpisode(11);">epilogue</a>
                 </h3>
                 <img src="./siteimg/lamp_on.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" /><img src="./siteimg/lamp_off.png" class="epdif" />
               </dd>
