append font and css

--- a/select.html
+++ b/select.html
@@ -5,6 +5,7 @@
     <!-- <script type="text/javascript" src="plugins/plugin-loader.js"></script>
     <link rel="stylesheet" href="plugins/plugin-loader.css" /> -->
     <link rel="shortcut icon" href="promote/iconimage_moriy_512x512.png"></link>
+    <link rel="stylesheet" href="./bitfont.css" />
 
     <!-- PWA -->
     <!-- <link rel="manifest" href="manifest.webmanifest"></link>
@@ -190,7 +191,6 @@
     <h2>
       <img src="./assets/image/GameMsg_SelectEpisode.png" class="blockimg" />
     </h2>
-
 
     <div id="episodes" class="episodes">
       <table class="episode_layout">
