--- a/stage07.html
+++ b/stage07.html
@@ -7,6 +7,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <title>Moriy - the deep fact</title>
         <link rel="shortcut icon" href="promote/iconimage_moriy_512x512.png"></link>
+        <link rel="stylesheet" href="./bitfont.css" />
 
         <!-- PWA -->
         <!-- <link rel="manifest" href="manifest.webmanifest"></link>
