--- a/story.html
+++ b/story.html
@@ -131,7 +131,14 @@
       <p>
         あ
       </p>
-      <p>aa</p>
+      <p>
+        ヨシュナ は 考えていた。
+        なぜ じぶん の ような みぶん の ひくい もの が しんえいたい の たいちょう
+        そのころ から てんぺんちい
+
+        みぶん の 高い どうりょう たち からの いやがらせ は なくなった が
+        ねたみ そねみ の 目 は いっそう つよく なった。
+      </p>
       <p>aa</p>
       <p>aa</p>
       <p>aa</p>
