--- a/stage04.html
+++ b/stage04.html
@@ -21,6 +21,7 @@
         <script type="text/javascript" src="./firstSeedEnchant.js"></script>
         <script type="text/javascript" src="./stage04.js"></script>
         <script type="text/javascript" src="./initMoriy.js"></script>
+        <script type="text/javascript" src="./storage.js"></script>
         <!-- <script type="text/javascript" src="./plugins/plugin-loader.js"></script>
         <link rel="stylesheet" href="plugins/plugin-loader.css" /> -->
         <script type="text/javascript">
