--- a/story.html
+++ b/story.html
@@ -28,7 +28,10 @@
       ];
 
       function gotoStage(episode){
-        alert("gotoStage is not implemented in story.html");
+        const no = episode.no;
+        const filename = `stage${("00" + no).slice(-2)}.html`;
+        window.location = filename;
+        //TODO: save last episode to localStorage
       }
 
       window.onload = function(){
@@ -49,6 +52,11 @@
           throw new Error("Story not found");
         }
 
+        const $episode = $story.querySelector("p.title span.index");
+        $episode.textContent = `Episode ${("00" + index).slice(-2)}`;
+        const $title = $story.querySelector("p.title span.name");
+        $title.textContent = episode.title;
+
         const rect = $story.getBoundingClientRect();
         const top = rect.top;
         const bottom = rect.bottom;
@@ -62,12 +70,12 @@
         document.addEventListener("touchend", (e)=>{touching = false;});
         document.addEventListener("dblclick", (e)=>{ gotoStage(episode); });
 
+        const boost = 10;
         const interval = 1000 / 60; // 60 FPS
         let currenttop = 100;
         const scroll = function(){
-          currenttop -= speed * (touching ? 10 : 1);
+          currenttop -= speed * (touching ? boost : 1);
           $story.style.top = `${currenttop}vh`;
-          console.debug({currenttop});
           if($story.getBoundingClientRect().bottom < 0){
             gotoStage(episode);
           }else{
@@ -104,7 +112,11 @@
           padding-left: calc(var(--font-size) * 3);
           padding-right: calc(var(--font-size) * 3);
           font-size: calc(var(--font-size) * 1);
-          line-height: 1.5em;
+          line-height: 2em;
+        }
+        section.story p.title {
+          text-align: center;
+          margin-bottom: calc(var(--font-size) * 6);
         }
 
     </style>
@@ -112,6 +124,35 @@
 
   <body>
     <section id="stage00:Prolog" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+      <p>
+        どんより と ぶあつい くもり空 を 見上げながら ヨシュナ は 考えていた。
+        なぜ 自分 の ような みぶん の ひくい もの が しんえいたい の たいちょう に えらばれたのか。
+      </p>
+      <p>
+        みぶん の たかい どうりょう たち の せんぼう と ねたみ そねみ の まなざし は ヨシュナ には いたい ほど に かんじられた。
+        国王 に 自分 を すいせん した 大そうじょう さま は いったい どういう つもり なのか。
+      </p>
+      <p><br/></p>
+      <p>
+        とき を 同じくして 王国 には いへん が おこりはじめていた。
+        しぜんさいがい の ぞうか や てんこう の ふじゅん による ふさく が 目に 見えて ふえた。
+      </p>
+      <p>
+        ひとびと は 光 の めがみ ライラ の かご が うすれ ヤミ の 女王 アリル が ふっかつ するのではないか と うわさする よう に なった。
+      </p>
+      <p><br/></p>
+      <p>
+        しんまい たいちょう の ヨシュナ に 手だて など あるはず も なく 不安 な きもち を おしころす ように くんれん に はげむ の だった。
+      </p>
+    </section>
+    <section id="stage01:Brightness" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+
       <p>
         ここ は 光 の めがみ ライラ の かご に 守られた 平和 な 王国 モーリィ。
         おんだん な きこう に めぐまれ がいてき の きょうい も ない。
@@ -127,44 +168,77 @@
       <p>
         おいうち を かける ように おきた 大日食 を きっかけ に ひとびと は ヤミ の 女王 アリル の ふっかつ を うわさする よう に なった。
       </p>
-      <p><br/></p>
-      <p>
-        あ
-      </p>
-      <p>
-        ヨシュナ は 考えていた。
-        なぜ じぶん の ような みぶん の ひくい もの が しんえいたい の たいちょう
-        そのころ から てんぺんちい
 
-        みぶん の 高い どうりょう たち からの いやがらせ は なくなった が
-        ねたみ そねみ の 目 は いっそう つよく なった。
-      </p>
-      <p>aa</p>
-      <p>aa</p>
-      <p>aa</p>
-      <p>aa</p>
-    </section>
-    <section id="stage01:Brightness" class="story bitfont">
     </section>
     <section id="stage07:Forecourt" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+      <p></p>
+      <p><br/></p>
     </section>
     <section id="stage08:Mausoleum" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+      <p></p>
+      <p><br/></p>
     </section>
     <section id="stage04:Passkey" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+      <p></p>
+      <p><br/></p>
     </section>
     <section id="stage02:Banners" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+      <p></p>
+      <p><br/></p>
     </section>
     <section id="stage06:Loophole" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+      <p></p>
+      <p><br/></p>
     </section>
     <section id="stage05:Dungeon" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+      <p></p>
+      <p><br/></p>
     </section>
     <section id="stage03:Maze" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+      <p></p>
+      <p><br/></p>
     </section>
     <section id="stage09:Core" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+      <p></p>
+      <p><br/></p>
     </section>
     <section id="stage10:Lyra" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+      <p></p>
+      <p><br/></p>
     </section>
     <section id="stage11:Epilogue" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+      <p></p>
+      <p><br/></p>
     </section>
   </body>
 </html>
